[gd_scene load_steps=33 format=2]

[ext_resource path="res://images/bg0.png" type="Texture" id=1]
[ext_resource path="res://Level.gd" type="Script" id=2]
[ext_resource path="res://images/bg1.png" type="Texture" id=3]
[ext_resource path="res://images/bg3.png" type="Texture" id=4]
[ext_resource path="res://images/bg2.png" type="Texture" id=5]
[ext_resource path="res://images/still.png" type="Texture" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://images/run00.png" type="Texture" id=8]
[ext_resource path="res://images/run01.png" type="Texture" id=9]
[ext_resource path="res://images/run02.png" type="Texture" id=10]
[ext_resource path="res://images/run03.png" type="Texture" id=11]
[ext_resource path="res://images/run13.png" type="Texture" id=12]
[ext_resource path="res://images/run10.png" type="Texture" id=13]
[ext_resource path="res://images/run11.png" type="Texture" id=14]
[ext_resource path="res://images/run12.png" type="Texture" id=15]
[ext_resource path="res://images/stand0.png" type="Texture" id=16]
[ext_resource path="res://images/stand1.png" type="Texture" id=17]
[ext_resource path="res://images/fall0.png" type="Texture" id=18]
[ext_resource path="res://images/fall1.png" type="Texture" id=19]
[ext_resource path="res://images/jump0.png" type="Texture" id=20]
[ext_resource path="res://images/jump1.png" type="Texture" id=21]
[ext_resource path="res://images/blow1.png" type="Texture" id=22]
[ext_resource path="res://images/blow0.png" type="Texture" id=23]
[ext_resource path="res://Game.gd" type="Script" id=24]
[ext_resource path="res://images/recoil1.png" type="Texture" id=29]
[ext_resource path="res://images/recoil0.png" type="Texture" id=53]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "blow_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "blow_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "stand_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "jump_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ) ],
"loop": true,
"name": "run_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "jump_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "stand_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ) ],
"loop": true,
"name": "recoil_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "recoil_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 30 )

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.486275, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "normal"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25, 240 )

[node name="Game" type="Node2D"]
script = ExtResource( 24 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 400, 65.5 )
collision_mask = 2147483654
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.992588, 1 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2( 0, 4.5 )
shape = SubResource( 2 )

[node name="Trigger" type="Area2D" parent="Player"]
visible = false
collision_layer = 0
collision_mask = 64

[node name="TriggerCollisionShape" type="CollisionShape2D" parent="Player/Trigger"]
position = Vector2( 0, 4.5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/hurt = SubResource( 3 )
anims/normal = SubResource( 4 )

[node name="Level" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 2 )

[node name="Background" type="AnimatedSprite" parent="Level"]
position = Vector2( 400, 240 )
z_index = -3
frames = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="StaticBody2D" parent="Level"]
position = Vector2( 25, 240 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="Left" type="CollisionShape2D" parent="Level/Walls"]
shape = SubResource( 6 )

[node name="Right" type="CollisionShape2D" parent="Level/Walls"]
position = Vector2( 750, 0 )
shape = SubResource( 6 )
[connection signal="blow" from="Player" to="." method="_on_Player_blow"]
[connection signal="death" from="Player" to="." method="_on_Player_death"]
[connection signal="area_entered" from="Player/Trigger" to="Player" method="_on_Trigger_area_entered"]
[connection signal="enemy_fired" from="Level" to="." method="_on_enemy_fired"]
[connection signal="enemy_spawned" from="Level" to="." method="_on_enemy_spawned"]
[connection signal="level_cleared" from="Level" to="." method="_on_level_cleared"]
